# minparse

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo.py
src/minparse/: __init__.py  parser.py  types.py
